--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,50 +1,42 @@
 ---
-interface Props {
-	title: string;
-}
-
-const { title } = Astro.props;
+const title = "Sabor Express";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<div class="grid grid-cols-5 grid-rows-5 gap-4">
+			<div class="col-span-5 col-start-1 row-start-1">
+				<h1>{title}</h1>
+			</div>
+			<div class="row-span-3 col-start-1 row-start-2">
+				<section>
+					<h2>Categorías</h2>
+					<ul class="categories">
+						<li><a href="/categoria/entradas">Entradas</a></li>
+						<li>
+							<a href="/categoria/platos-principales"
+								>Platos Principales</a
+							>
+						</li>
+						<li><a href="/categoria/postres">Postres</a></li>
+						<li><a href="/categoria/bebidas">Bebidas</a></li>
+					</ul>
+				</section>
+			</div>
+			<div class="col-span-4 row-span-3 col-start-2 row-start-2">
+				<slot />
+			</div>
+			<footer class="col-span-5 col-start-1 row-start-5">
+				<p>&copy; 2024 Sabor Express. Todos los derechos reservados.</p>
+			</footer>
+		</div>
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
