feat: Update image URL in product card component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const products: any = await getProducts();
 							name={product.name}
 							description={product.description}
 							price={product.price}
-							imageUrl={product.imageUrl}
+							imageUrl={product.image}
 						/>
 					))
 				}
